docs/erd/version2.4/ERD.md
# ERD — AlphaStack 데이터 모델 (v2.4)

> **정본은 [`ingest/store/migrations.py`](../../../ingest/store/migrations.py) 입니다.**
> 이 문서가 코드와 어긋나면 마이그레이션 코드가 맞습니다.
> v2.4 · 2026-09-07 · 이전 판 [v2.3](../version2.3/ERD.md) · [v2.2](../version2.2/ERD.md) ·
> [v2.1](../version2.1/ERD.md) · [v2.0](../version2.0/ERD.md) · [v1.0](../version1.0/ERD.md) · [변경사항](변경사항.md)
>
> 실측 기준: `krx_cache.db` **스키마 v13 · 표 21개 · 6,561 MB** (2026-09-07,
> `python scripts/check_db.py` + `PRAGMA table_info` 전수)
>
> 🆕 v2.4 는 표가 늘지 않고 **기본키 하나가 바뀐 판**입니다 — `index_price` 의 기본키에 `index_class`
> (시장)가 들어갔습니다(v13 · PR #157). 같은 이름의 업종지수가 KOSPI·KOSDAQ 에 각각 있어, 시장
> 없이는 한쪽이 다른 쪽을 덮습니다 — 09-07 아침에 실제로 40,324행을 잃고 복구했습니다(§2.2).

⚠️ **v1.0 과는 완전히 다른 문서입니다.** v1.0 은 PostgreSQL `data-service` 설계
(`securities` · `ohlcv` · `watermark` …)를 옮긴 것인데, 그 경로는 실행된 적이 없고
저장소는 **SQLite 파일 하나**(`data/krx_cache.db`)로 확정됐습니다. 왜 그랬는지는
[v2.0 변경사항](../version2.0/변경사항.md)에 있습니다.

---

## 1. 한눈에 — 표 21개를 일곱 묶음으로

자료 표 5개 · 신원 표 2개(v10) · 🆕 **종목기본정보 1개(v11)** · 🆕 **텍스트 신호 1개(v12)** ·
운영 표 12개입니다.
**운영 표가 더 많은 것이 이 설계의 특징입니다** — "무엇을 받았나"만큼
"왜 안 받았나 · 언제 받았나 · 몇 번 불렀나"를 남기기 때문입니다.

```
┌── 자료 (팀원이 쓰는 것) ──────────────────────────────────────────┐
│                                                                  │
│  daily_price      종목 일별시세   9,231,938행  2010-01-04 ~      │
│  index_price      지수 일별시세     196,272행  2010-01-04 ~      │
│                   🆕 PK (bas_dd, index_name, index_class) v13    │
│  dart_financial   재무 (사업보고서) 662,933행  FY2015 ~ 2025     │
│  macro_series     거시 지표 9종      17,864행  2009-08 ~         │
│  dart_disclosure  공시 목록      1,555,556행  2010-01-04 ~      │
│                                                                  │
└──────────────────────────────────────────────────────────────────┘
┌── 수집 대장 (다시 받지 않기 위해) ────────┐  ┌── 반입 (남이 준 파일) ──┐
│  collect_log       출처×대상 수집 대장    │  │  inbox_batch    묶음     │
│  fetch_log         옛 종목 대장 (읽기 전용)│  │  inbox_accepted 합격 행  │
│  index_fetch_log   옛 지수 대장 (읽기 전용)│  │  inbox_quarantine 격리 행│
└──────────────────────────────────────────┘  └─────────────────────────┘
┌── 호출 예산·원문 ────────────────────────┐  ┌── 실행 기록 (v8) ────────┐
│  call_budget    오늘 몇 번 불렀나         │  │  ingest_run       실행    │
│  raw_response   응답 원문 (재정규화용)    │  │  ingest_run_stage 단계    │
│  robots_cache   robots.txt 24시간 캐시   │  │  (대시보드가 폴링할 표)   │
└──────────────────────────────────────────┘  └─────────────────────────┘
┌── 거래일 달력 (v9) ──────────────────────────────────────────────┐
│  trading_calendar  실제로 열린 날   12,315행  (ALL·KOSPI·KOSDAQ) │
│                    ⚠️ daily_price 에서 파생 — 🆕 refresh 가 매번 깐다│
└──────────────────────────────────────────────────────────────────┘
┌── 신원 = 다리 (v10 · 공공데이터포털) ────────────────────────────┐
│                                                                  │
│  stock_identity  4,197,242행  1,635일 · 3,165종 · crno 3,148    │
│  corp_profile       40,573행  법인 3,142곳 (한 곳이 최대 33줄)   │
│                                                                  │
│  🔴 시세 표가 아니다. 다른 자료에 **붙이기 위한** 표다.           │
│     유니버스로 쓰려면 daily_price 와 반드시 교집합 (§2.6)         │
└──────────────────────────────────────────────────────────────────┘
┌── 종목기본정보 (v11 · KRX) 🆕 ───────────────────────────────────┐
│  stock_base_info  9,229,173행  3,677종  2010-01-04 ~ 2026-09-03  │
│  🔴 우선주 판별의 정본 — 이름으로 판정하면 개명 때 틀린다 (§2.8)   │
└──────────────────────────────────────────────────────────────────┘
┌── 텍스트 신호 (v12) 🆕 ──────────────────────────────────────────┐
│  text_signal      18,600행  고유 제목마다 · 모델 리비전 포함       │
│  🔴 시점 칸이 없다 — 시점은 반출할 때 접수번호에 붙는다 (§2.9)     │
└──────────────────────────────────────────────────────────────────┘
```

행 수는 2026-09-07 실측입니다. 수집이 돌면 움직입니다. (`corp_profile` 은 40,569행 · 신원·법인은 v2.3 그대로)

---

## 2. 자료 표

### 2.1 `daily_price` — 종목 일별 시세 ★

**PK `(bas_dd, code)`** · 보조 인덱스 `(code, bas_dd)`

| 칸 | 형 | 뜻 | 함정 |
|---|---|---|---|
| `bas_dd` | TEXT | 거래일 `YYYYMMDD` | **날짜형이 아니라 문자열**이다. 사전순 = 날짜순이라 `<=` 비교가 그대로 통한다 |
| `code` | TEXT | 종목코드 6자리 | **여섯 자리 숫자가 아니다** — 5·6번째 자리에 영문이 오는 종목이 84종 있다 (`0001B0` 등) |
| `name` | TEXT | 종목명 | 같은 코드도 이름이 바뀐다 |
| `market` | TEXT | `KOSPI` / `KOSDAQ` | 날짜당 시장별로 따로 받는다 |
| `sector` | TEXT | KRX 업종 | WICS 와 다르다. KOSPI 는 빈 문자열이 많다 |
| `open` `high` `low` `close` | INTEGER | 시·고·저·종가 (원) | 🔴 **수정주가가 아니다** — 아래 함정 절 참조 |
| `change` | INTEGER | 전일 대비 (원) | 전일 종가 = `close - change` |
| `change_rate` | REAL | 등락률 (%) | `change/(close-change)×100` 과 정확히 일치 (920만 행 위반 0건 실측) |
| `volume` | INTEGER | 거래량 (주) | 거래정지일은 0 |
| `value` | INTEGER | 거래대금 (원) | |
| `market_cap` | INTEGER | 시가총액 (원) | 1.8경 규모라 float64 유효숫자를 넘는다 — CSV 왕복 시 1 ULP 어긋남 실측 |
| `listed_shares` | INTEGER | 상장주식수 (주) | 증자·감자로 바뀐다. 분할 계수 역산에 쓴다 |
| `adj_open` `adj_high` `adj_low` `adj_close` | REAL | **수정 시·고·저·종가** (v9) | 🔴 **수익률·라벨은 이쪽으로** 계산한다. INTEGER 가 아닌 이유는 아래 |
| `adj_source` | TEXT | `fdr` / `chain` (v9) | 그 행의 수정값이 어디서 왔나. **날짜로는 유추할 수 없다** |

#### 🔴 원가격과 수정가격 — 어느 쪽을 쓰나 (v9)

`close` 는 KRX 원문 그대로라 **액면분할이 조정돼 있지 않습니다** (이슈 #51).
분할일에 가격이 그대로 뚝 떨어지므로 `close` 로 수익률을 계산하면 삼성전자
2018-05-04 이 **−98.04%** 로 읽힙니다 (실제 −2.08%). 분할·병합 1,139건이 806종(21.9%)에
걸쳐 있습니다.

| 쓰임 | 어느 칸 | 왜 |
|---|---|---|
| 수익률 · 라벨 · 변동성 피처 | **`adj_*`** | 분할이 펴져 있다 |
| 시가총액 | **`close`** | `market_cap = close × listed_shares` 는 원가격이라야 맞다 |
| 원문 대조 · 재현 | **`close`** | 원자료 보존 — 언제든 되돌아갈 수 있어야 한다 |

**원 칸을 덮지 않은 이유**가 하나 더 있습니다 — 후방조정 값은 **새 분할이 생기면 과거
전체가 다시 바뀝니다.** append-only 워터마크 반입과 정면으로 충돌하므로, 원본을 덮으면
어제 결과를 재현할 수 없습니다. (재현이 중요한 자리에서는 구간만 보는
`common.corporate_actions.span_factor` 를 쓰는 편이 안전합니다.)

**REAL 인 이유**: 후방조정 값은 정수가 아닙니다. 삼성전자 2010-01-04 은 원종가 809,000 이
아니라 **16,180.00** 이 되고, 분할이 잦았던 종목은 1원 아래로 내려갑니다.
INTEGER 로 두면 조용히 잘립니다.

**`adj_source` 가 필요한 이유**: FinanceDataReader(네이버 fchart)는 **최근 3,000거래일만**
줍니다 — `count` 를 6000·9000 으로 올려도 서버가 자르는 것을 실측했습니다. 그래서 그
경계 앞은 우리가 조정계수로 이어 붙였습니다(`chain`). 그런데 **경계가 종목마다 다릅니다** —
3,000일 창이 오늘이 아니라 **그 종목의 마지막 거래일**에 걸리기 때문에, 2015년에
상장폐지된 종목은 2010년까지 `fdr` 이 닿습니다. 날짜로 유추할 수 없어 칸으로 둡니다.

실측(2026-09-02 · 9,223,644행 **전부** 채움): `fdr` **81.6%** · `chain` **18.4%**.
`chain` 구간의 오차 상한은 **최대 0.39%** 입니다 — FDR 을 앵커 하루만 남기고 나머지
2,999일을 우리 계산으로 채워 진짜 값과 대조해 쟀습니다.

⚠️ **정지일**(`open=high=low=0`)은 `adj_open`·`adj_high`·`adj_low` 가 **NULL** 이고
`adj_close` 만 있습니다. 0 에 배율을 곱해 실으면 "그 날 0원" 이 되고, 고저 검사
(`0 ≤ 0 ≤ 0`)도 통과해 버립니다.

⚠️ **시세를 다시 받아도 `adj_*` 는 지워지지 않습니다.** `krx_store` 의 쓰기가
`INSERT OR REPLACE`(행을 지우고 새로 넣는다) 에서 `ON CONFLICT DO UPDATE`(적힌 칸만
바꾼다) 로 바뀌었기 때문입니다. 전자였다면 하루만 재수집해도 그 날 3천 종목의 수정주가가
사라지는데 **행 수는 그대로**라 어떤 검증에도 안 걸립니다.

### 2.2 `index_price` — 지수 일별 시세

**PK `(bas_dd, index_name, index_class)`** (🆕 v13) · 보조 인덱스 `(index_name, bas_dd)`

칸은 `daily_price` 와 같은 골격이되 가격이 REAL(포인트)이고, `index_class`(시장 · `KOSPI`/`KOSDAQ` ·
`NOT NULL`)가 있습니다. 1차 예측 대상 **코스피 200** 이 여기 삽니다. 지수는 계산값이라
수정주가 문제가 없습니다.

🔴 **왜 기본키에 시장이 들어갔나 (2026-09-07 · PR #157 · #144).** KOSPI 와 KOSDAQ 은 `건설` · `금속` ·
`화학` 같은 **같은 이름의 업종지수를 각각** 가집니다. 옛 기본키 `(bas_dd, index_name)` 에서는 KOSDAQ
업종지수를 받는 순간 `INSERT OR REPLACE` 가 KOSPI 행을 덮었습니다 — 09-07 아침에 KOSPI 업종지수
**17종 × 40,324행**(20170102~20260904)이 그렇게 사라졌고, 오류도 경고도 없었습니다. **행 수는
오히려 늘어서**(196,272 → 244,108) `index_class` 별로 세고서야 드러났습니다. 완전 복구한 뒤 처음엔
`krx_index._시장가드` 가 받기 전에 막았고(v2.3 ↔ v3.8), 이제는 **기본키가 답합니다.**

마이그레이션은 SQLite 가 기본키를 못 바꾸므로 **새 표를 만들고 옮기고 지우고 이름을 바꾸는** 방식입니다
(`index_price_v13` → `index_price`). `index_class` 가 빈 행이 있으면 세우고 무엇을 하라고 적습니다 —
막다른 길로 두지 않습니다. 실측: KOSPI 51종 196,272행 · KOSDAQ 0종 · `tests/test_migrations.py` 신설.

⚠️ 조인할 때도 **시장을 함께** 겁니다. `supply.sector` 의 업종지수 조인과 `verify_sector` §4 는 시장별로
봅니다(v3.8) — 이름만으로 붙이면 KOSDAQ 종목이 KOSPI 업종지수에 붙습니다.

### 2.3 `dart_financial` — 재무 (전체 재무제표)

**PK `(corp_code, bsns_year, reprt_code, fs_div, sj_div, account_nm, ord, account_detail)`**
· 보조 인덱스 `(stock_code, bsns_year)` · `(corp_code, bsns_year, reprt_code)` · `(rcept_dt, corp_code)`

| 칸 (주요) | 뜻 | 함정 |
|---|---|---|
| `corp_code` | DART 회사 고유번호 | 종목코드와 다르다. 매핑은 `corp_code.zip` 에서 |
| `bsns_year` · `reprt_code` | 사업연도 · 보고서 종류 | 사업보고서 = `11011` |
| `fs_div` · `sj_div` | 연결/별도 · 재무제표 종류 | `CFS`(연결)·`OFS`(별도) × BS/IS/CIS/CF/SCE |
| `account_detail` | 계정 상세 (자본변동표) | 🔴 **PK 에서 빼면 자본변동표 6.4%(22,436행)가 조용히 사라진다** — 같은 계정명이 자본 항목별로 반복되기 때문 |
| `thstrm_amount` | 당기 금액 | 문자열로 오는 `-` 는 결측으로 정규화했다 |
| `rcept_dt` | **접수일** | **시점 정합의 기준.** 결산기준일로 조인하면 미공시 값이 붙는다(미래 누출) |

- 2026-09-02 실측: **662,933행 · 350종 · FY2015~2025 · 접수일 100% 채움**
- DART 는 **2015년 이전 전체계정을 주지 않습니다** (2010~2014 전수 호출로 실측)
- 학습에는 HF `alphastack-dart` 의 **pit/** 층만 씁니다 (시점은 `rcept_dt`).
  **bulk/** 층(44파일)은 접수일이 없어 학습 금지 — 탐색·대조용

### 2.4 `macro_series` — 거시 지표 (v7)

**PK `(indicator_id, period)`** · 보조 인덱스 `(known_at, indicator_id)` 등

| 칸 (주요) | 뜻 | 함정 |
|---|---|---|
| `indicator_id` | 지표 이름 (`base_rate` 등 9종) | |
| `period` | 기준 기간 (`202608` · `20260901`) | 월간·일간이 섞인다 — `cycle` 로 가른다 |
| `known_at` | **언제부터 알 수 있었나** | 🔴 **계산값이다.** ECOS 는 발표일을 안 준다(세 API 전수 확인). 발표 규칙에서 보수적으로 계산했으므로, **규칙을 바꾸면 전량 재수집** |
| `stat_code` · `item_code` | ECOS 원 코드 | 재현·검증용 |

2026-09-02 실측: 17,851행 · 9종 · 2009-08 ~.

### 2.5 `dart_disclosure` — 공시 목록 (🆕 채움 · 2026-09-04)

**PK `rcept_no`** · 실측 **1,555,556행 · 법인 2,651곳 · 2010-01-04 ~ 2026-09-04**
(유가 824,626 · 코스닥 730,930). 출처 DART `list.json`.

| 칸 (주요) | 뜻 | 함정 |
|---|---|---|
| `rcept_no` | 접수번호 (고유) | 반출 파일의 행 단위 |
| `corp_code` · `stock_code` | DART 회사 번호 · 종목코드 | `stock_code` 가 빈 행(비상장 법인)은 반출하지 않는다 |
| `report_nm` | 공시 **제목** | `text_signal` 로 가는 조인 키 · 🔴 그대로 피처로 쓰면 시점이 샌다 (§2.9) |
| `rcept_dt` | **접수일** | 시각이 없다 — 텍스트 신호의 `known_at` 은 **다음 거래일** |

**종목이 아니라 날짜로 받았습니다.** 종목별로 받으면 3,482종 × 창인데 날짜로 받으면 공시
건수만큼이면 됩니다. 실측으로 확인한 제약 셋 — ① `page_count` 상한 **100**(200·500 을 줘도 100행만,
조용히 잘린다) ② 창이 넓으면(한 해) `total_count` 가 **`None`** — 오류도 빈 결과도 아닌 다른 모양의
응답이라 달 단위로 받는다 ③ `corp_cls` 로 시장을 좁혀야 하루 504건 중 273건이 아니라 전부를 쓴다.
공시 **본문**은 여전히 3차입니다.

---

### 2.6 `stock_identity` — 종목 신원 = 다리 (v10) ★

**PK `(bas_dd, code)`** · 인덱스 `(code, bas_dd)` · `(crno)` 부분 · `(known_at)`
출처: 공공데이터포털 금융위 `GetKrxListedInfoService/getItemInfo`
실측 2026-09-03: **4,197,242행 · 1,635일(20200102~20260831) · 3,165종**
· ISIN 결측 0행 · `crno` 가 있는 종목 **3,145종** — 나머지 20종(외국기업)은
포털이 `crno` 자리에 **`0000000000000`** 을 준다(§2.6 함정 절)

| 칸 | 형 | 뜻 | 함정 |
|---|---|---|---|
| `bas_dd` | TEXT | 기준일 `YYYYMMDD` | 🔴 **그 시점의 상장 목록이 아니다** — 아래 함정 절 |
| `code` | TEXT | 종목코드 6자리 | 🔴 응답의 `srtnCd` 는 **`A` 접두사**가 붙어 온다(`A000020`). 떼고 넣는다 |
| `isin_cd` | TEXT | 국제 표준 식별자 | `KR7000020008` |
| `crno` | TEXT | **법인등록번호** | `corp_profile` 로 가는 열쇠. NULL 인 행이 있어 인덱스가 부분 인덱스다 |
| `corp_nm` | TEXT | 법인명 | 종목명과 다를 수 있다 |
| `item_nm` | TEXT | 종목명 | |
| `market` | TEXT | `KOSPI` / `KOSDAQ` / `KONEX` | |
| `known_at` | TEXT | 언제부터 알 수 있었나 | 🔴 **계산값** — `bas_dd` 의 다음 거래일 |
| `known_rule` | TEXT | 어떤 규칙으로 냈나 | `basDt+1session`. 규칙을 바꾸면 재수집해야 하는데, 안 남기면 어느 행이 옛 규칙인지 알 수 없다 |
| `fetched_at` | TEXT | 받은 시각 | |

제약이 셋입니다. `length(bas_dd)=8` · `length(code)=6` ·
`code GLOB '[0-9][0-9][0-9][0-9]*'`.

세 번째가 왜 *"전부 숫자"* 가 아니라 **앞 4자리만** 인지가 중요합니다.
종목코드는 5·6번째 자리에 영문이 올 수 있어(`0001A0` · `00088K` 등 신형우선주)
고유 3,677종 중 **84종**이 여기 걸립니다. `code GLOB '[0-9]*'` 로 막으면 그 84종이
통째로 격리되는데, **격리는 조용해서** 한참 뒤에나 눈치챕니다. 앞 4자리는 3,677종
전수에서 항상 숫자였고, 이 검사는 접두사를 안 뗀 값(`A00002`)을 잡아 줍니다.

#### 🔴 `basDt` 목록은 그 시점의 상장 목록이 아니다

`basDt=20200102` 로 받은 2,334종 안에 **그날 이후에야 상장된 종목이 33종** 있었습니다.
가장 늦은 것은 듀켐바이오(176750)로 첫 시세가 **2024-12-20**, 4년 뒤입니다.
포털은 최신에 가까운 목록에 기준일 딱지만 붙여 주는 것으로 보입니다.

```python
# 🔴 이렇게 쓰면 미래참조다 — 아직 상장 안 된 종목이 섞인다
universe = identity[identity.bas_dd == d].code

# ✅ 반드시 그날 실제로 거래된 종목과 교집합
universe = set(identity_codes) & set(price_codes_on(d))
```

에러가 나지 않고 **성능만 좋아집니다.** `scripts/verify_identity.py` 가 이 항목을
매번 셉니다.

#### 🔴 `crno = 0000000000000` — 틀린 짝이 붙는다

포털은 외국기업의 법인등록번호 자리에 `0000000000000` 을 줍니다. **외국기업 20종이
이 번호 하나를 공유**했습니다(3,349행 · 실측). 그대로 두고 `corp_profile` 과 조인하면
**서로 다른 20개 회사가 같은 법인 하나에 붙습니다.** 실제로 그 번호로 받아 둔 법인
개요에 헝셩그룹유한회사와 자프코 아시아 테크놀러지 펀드 3 이 섞여 있었습니다.

> 조인이 **0행**이 되는 실수는 결과가 비어서 눈에 띕니다.
> 그런데 **틀린 짝**이 붙는 실수는 결과가 그럴듯해서 안 보입니다. 이쪽이 더 비쌉니다.

정상적으로 한 번호를 공유하는 최대는 **2종**입니다(키움증권 보통주·우선주). 그래서
검증기가 *"한 법인번호에 가장 많이 달린 종목 수"* 를 매번 찍고 5종을 넘으면 경보합니다.

#### 시세 표와의 대차대조 (전 구간 실측)

| 구분 | 종수 | 무엇 |
|---|---:|---|
| 공통 | **2,992** | 다리가 이어진 것 |
| 신원에만 | 173 | **전부 KONEX** — 우리가 KONEX 시세를 안 받는다 (결함이 아니라 범위 차이) |
| 시세에만 | 135 | 우선주 129 + 외국기업 6 |

🔴 **표본으로 재면 틀린다.** 8일치(20200102~20200113)로 쟀을 때는 외국기업이 21종
안 이어졌는데, 전 구간에서는 **6종**이다. 포털이 외국기업을 안 주는 게 아니라
*그날 목록에 없었을 뿐*이었다. 끝내 안 나오는 6종 중 900140(코라오홀딩스)은
20260901 까지 거래 중이라 **진짜 결측**이다.

#### 포털이 안 주는 것 — 우선주와 외국기업
포털의 한계이지 우리 조인의 결함이 아닙니다. 그래서 검증기는 이 둘을 **따로 세고**
*"그 밖"* 이 5% 를 넘을 때만 경보합니다 — 우선주 때문에 매번 빨간불이 켜지면
사람이 검증기를 무시하게 되기 때문입니다.

**과거 구간은 2020-01-02 부터**입니다. 2019 이전은 `totalCount=0` 으로 옵니다
(설계 단계에서는 2010년부터로 봤는데 틀렸습니다).

---

### 2.7 `corp_profile` — 법인 개요 (v10)

**PK `(crno, fst_opeg_dt)`** · 인덱스 `(xchg_lstg_dt, xchg_lstg_abol_dt)` · `(known_at)`
출처: 공공데이터포털 금융위 `GetCorpBasicInfoService_V2/getCorpOutline_V2`
실측 2026-09-03: **40,573행 · 법인 3,142곳** · 한 법인이 최대 **33줄** · 폐지일이 있는 곳 340

| 칸 | 형 | 뜻 | 함정 |
|---|---|---|---|
| `crno` | TEXT | 법인등록번호 | `stock_identity.crno` 로 붙는다 |
| `fst_opeg_dt` | TEXT | **유효 시작일** | 🔴 기준일이 아니다. **PK 의 절반** — 아래 |
| `last_opeg_dt` | TEXT | 유효 끝난 날 | 가장 최근 행은 계속 밀린다 |
| `corp_nm` | TEXT | 법인명 | |
| `sic_nm` | TEXT | 표준산업분류 | 대부분 비어 온다 |
| `estb_dt` | TEXT | 설립일 | 두 자리 연도로 올 때가 있다 — 아래 |
| `stac_mm` | TEXT | 결산월 | `'12'` 같은 두 자리 |
| `xchg_lstg_dt` `xchg_lstg_abol_dt` | TEXT | 유가증권 상장일 · **상장폐지일** | 시세로는 알 수 없는 공식 기록 |
| `kosdaq_lstg_dt` `kosdaq_lstg_abol_dt` | TEXT | 코스닥 상장일 · 폐지일 | |
| `audt_rpt_opnn` | TEXT | 감사의견 | `audtRptOpnnCtt` |
| `actn_audpn` | TEXT | 회계감사인 | `actnAudpnNm` |
| `empe_cnt` | INTEGER | 종업원수 | `enpEmpeCnt` |
| `pn1_avg_slry_amt` | INTEGER | 1인평균급여 | `enpPn1AvgSlryAmt` |
| `smenp_yn` | TEXT | 중소기업 여부 | 대부분 비어 온다 |
| `known_at` | TEXT | 언제부터 알 수 있었나 | 🔴 여기서는 **관측값** — `fst_opeg_dt` 를 그대로 |
| `known_rule` | TEXT | 어떤 규칙 | `fstOpegDt` |
| `fetched_at` | TEXT | 받은 시각 | |

#### 🔴 기본키가 `crno` 하나가 아니다

설계 단계에서는 법인 하나에 한 줄인 줄 알았습니다. 실제로는 **법인 하나가 이력
여러 줄**을 줍니다 — 상호가 바뀌거나 감사인이 바뀌면 새 줄이 생기고, 각 줄이 언제부터
유효한지를 `fstOpegDt` 로 말합니다. `crno` 만 PK 로 잡으면 **가장 최근 한 줄만 남고
나머지가 조용히 덮입니다.**

이것은 재무의 `account_detail` 과 같은 종류의 실수입니다 —
[칸 이름이 겹치면 행이 조용히 사라진다](#23-dart_financial--재무-전체-재무제표).

#### 두 자리 연도 — 56~99 는 1900대

상장일·설립일이 두 자리 연도로 올 때가 있습니다. **56~99 → 1900대**로 풉니다.
근거는 **KRX 개장이 1956-03** 이라 그보다 이른 상장일이 있을 수 없다는 것입니다.
검증기가 양쪽에서 셉니다 — *"1956-03 보다 이른 상장일"*(1900대로 잘못 푼 것)과
*"2030년보다 미래인 상장일"*(2000대로 잘못 푼 것).

#### `known_at` — 계산값과 관측값을 섞지 않는다

| 표 | `known_rule` | 성격 |
|---|---|---|
| `stock_identity` | `basDt+1session` | **계산값** — 포털이 발표 시각을 안 준다 |
| `corp_profile` | `fstOpegDt` | **관측값** — 출처가 유효 시작일을 직접 준다 |

검증기가 규칙 분포를 찍어 **한 가지인지** 확인합니다. 섞여 있으면 어느 행이 옛 규칙인지
갈라내야 합니다. 거시(`macro_series`)의 `known_at` 도 계산값이라 **규칙을 바꾸면 재수집**입니다(§2.4).

---

### 2.8 `stock_base_info` — 종목기본정보 = 우선주 판별의 정본 (v11) 🆕

**PK `(bas_dd, code)`** · 인덱스 `(code, bas_dd)` · `(kind_stkcert_tp_nm)` · `(known_at)`
출처: KRX 종목기본정보 (`fetch_base_info.py` · KONEX 제외 8,204콜)
실측 2026-09-04: **9,220,879행 · 3,677종 · 2010-01-04 ~ 2026-08-31** (KOSPI 3,777,777 · KOSDAQ 5,443,102)

| 칸 | 형 | 뜻 | 함정 |
|---|---|---|---|
| `bas_dd` | TEXT | 기준일 | 🔴 **그날의 사실**이다 — 같은 엔드포인트를 다른 날짜로 부르면 다른 답 (유가 2015 899 · 2020 916 · 2026 943행) |
| `code` | TEXT | 종목코드 | 5·6번째 자리 영문 84종 |
| `isin_cd` · `isu_nm` · `isu_abbrv` · `isu_eng_nm` | TEXT | ISIN · 정식명 · 약명 · 영문명 | 이름은 바뀐다 — 키가 아니다 |
| `list_dd` | TEXT | 상장일 | 자리표시자 7종은 `None` |
| `market` · `secugrp_nm` · `sect_tp_nm` | TEXT | 시장 · 증권그룹 · 소속부 | |
| `kind_stkcert_tp_nm` | TEXT | **주권종류** (보통주 · 우선주 …) | 🔴 우선주 판별의 **정본**. 이름으로 판정하면 개명 구간에서 틀린다 — 10종 · 10,190행 (포스코대우 · S&T대우 · 디피아이홀딩스2B …) |
| `parval` | TEXT | 액면가 | 예탁증권·투자회사는 0 이 **정상**(액면가 개념이 없다) — 결측이 아니다 |
| `list_shrs` | INTEGER | 상장주식수 | 감자·증자 판정에 쓴다 — 배율 ≥ 2 이면 `adj_close` 가 이었는지 본다 (`verify_base_info` §9) |
| `known_at` · `known_rule` | TEXT | 다음 거래일 · `basDd+1session` | **계산값** |

#### 🔴 액면가로 감자를 판정하면 안 보인다

액면분할·병합은 액면가가 같이 바뀌지만 **감자는 그대로**입니다. 액면가만 보면 219건이 전부 "설명
안 됨" 으로 쏟아지고 그 안에 진짜 결함이 묻힙니다. 판정은 **주식수 배율**입니다 — 주식수가 x 배가
되면 주가는 1/x 배가 되어야 하고, `close` 가 그 점프를 따라갔는데 `adj_close` 도 따라갔다면 조정이
안 된 것입니다. 이 표로 17자리를 찾아 2026-09-04 에 43,777행을 보정했습니다 — ⚠️ 보정 코드는 아직
정본에 없습니다([데이터파트 v3.4 §6](../../데이터파트/version3.4/명세서.md)).

---

### 2.9 `text_signal` — 공시 제목 감성 확률 (v12) 🆕

**PK `(text_sha, model_id)`** · 인덱스 `(report_nm, model_id)`
출처: `dart_disclosure.report_nm` 의 고유값에 `snunlp/KR-FinBert-SC` 를 **로컬 CPU** 로
실측 2026-09-04: **18,600행** (고유 제목 100% · 리비전 하나 `f8586286`)

| 칸 | 형 | 뜻 | 함정 |
|---|---|---|---|
| `text_sha` | TEXT | 제목 SHA-256 앞 16자 | 제목이 최대 172자라 해시를 키로 · 검증기가 **전량 재계산**해 대조 |
| `report_nm` | TEXT | 제목 원문 | 해시만 있으면 사람이 확인할 수 없어 함께 둔다 · `dart_disclosure` 와 이 칸으로 조인 |
| `model_id` | TEXT | 어느 모델 | PK 의 절반 — 모델을 바꾸면 **나란히 쌓이지** 덮지 않는다 |
| `revision` | TEXT | HF 커밋 해시 | 🔴 주인이 가중치를 갈아 끼울 수 있어 **이게 재현성**이다. 오프라인으로 매기면 빈다 |
| `p_neg` · `p_neu` · `p_pos` | REAL | 확률 3칸 | `CHECK` — 각각 [0,1] · **셋의 합이 1** (softmax 누락을 DB 가 막는다) |
| `scored_at` | TEXT | 매긴 시각 | |

#### 🔴 왜 `dart_disclosure` 에 칸을 붙이지 않았나

155만 행의 고유 제목이 **18,600개(1.2%)** 뿐입니다 — 행마다 매기면 같은 문장을 84번씩 읽습니다.
그리고 ① 모델을 바꾸면 155만 행을 다시 써야 하고 ② 모델 둘을 비교할 수 없고 ③ 리비전을 남길 자리가
없습니다. 그래서 **제목 단위 캐시**이고 **시점 칸이 없습니다.** `known_at`(접수일 다음 거래일)은
**반출할 때** 접수번호마다 만듭니다 — 표에 없는 칸이 파일(`text/text_signal_dev.parquet` · 1,295,176행
× 13칸)에는 있는 첫 경우입니다.

#### 🔴 신호가 없다 · 제목은 시점을 외운다

감성 × 5일 방향 카이제곱 — Cramer's V **0.026**(사실상 무관계). `report_nm` 을 피처로 쓰면 제목에
박힌 연월이 시장 국면을 가리켜 시점이 샙니다. 전문은 [기능명세 v1.5](../../기능명세/version1.5/텍스트_신호.md).

---

## 3. 운영 표

### 3.1 `collect_log` — 수집 대장 ★

**PK `(source, target)`**. "이미 받은 것을 다시 받지 않는다"의 근거입니다.
`status` 는 다섯 값 — `ok` · `empty`(휴장) · `error`(3회 재시도) ·
`quota_exhausted`(내일 재개) · `out_of_range`(출처가 안 주는 기간).
**`empty` 와 `error` 를 가르지 않으면 휴장일마다 매일 다시 물어보게 됩니다.**

`fetch_log` · `index_fetch_log` 는 900만 행 백필이 돌던 시절의 옛 대장입니다.
읽기 전용으로 남겨 두었고 새 기록은 `collect_log` 로만 갑니다.

### 3.2 `call_budget` — 호출 예산

**PK `(source, kst_date)`**. 서버가 거절하기 전에 **우리가 먼저 셉니다.**
KRX 는 키당 하루 10,000회(이용약관 제8조 ④).

### 3.3 `raw_response` — 응답 원문

**PK `(source, target, fetched_at)`**. zstd 압축 BLOB + SHA-256.
정규화 규칙이 틀린 것을 나중에 발견해도 **다시 받지 않고 원문에서 다시 만들기** 위한
표입니다. 재정규화는 수집 시각을 건드리지 않습니다(한 번 틀렸던 자리).

### 3.4 `inbox_batch` / `inbox_accepted` / `inbox_quarantine` — 반입 (v6)

남(팀원·외부)이 준 파일을 규격 검사해 들이는 자리입니다.
`inbox_batch` PK 는 `batch_id`(`<끝난시각>-<SHA-256 앞 12자>`) — 같은 파일을 규격
개정 뒤 다시 검사한 이력이 안 덮이게 시각과 지문을 함께 씁니다.
행 표 둘의 PK 는 `(batch_id, row_no)` — 합격이든 격리든 **원래 몇 번째 행이었는지**가
남아 보고서와 이어집니다.

🔴 **`daily_price` 에 바로 넣지 않습니다.** 우리가 받은 것과 남이 준 것을 한 표에
섞으면 "이 값은 누가 가져왔나"를 되짚을 수 없게 됩니다.

### 3.5 `ingest_run` / `ingest_run_stage` — 실행 기록 (v8)

**PK `run_id`** / **`(run_id, stage)`**. `python -m ingest` 한 번이 `ingest_run`
한 행이고, 출처별 단계가 `ingest_run_stage` 에 남습니다. **수집 현황 대시보드가
폴링할 표**로 설계했습니다 (FastAPI/화면 세션에서 사용 예정).

### 3.6 `robots_cache` — robots.txt 캐시

**PK `origin`**. 크롤링 전에 robots.txt 를 보는 가드의 24시간 캐시입니다.

### 3.7 `trading_calendar` — 실측 거래일 달력 (v9) ★

**PK `(bas_dd, market)`** · 보조 인덱스 `(market, bas_dd)`

| 칸 | 형 | 뜻 |
|---|---|---|
| `bas_dd` | TEXT | 거래일 `YYYYMMDD` |
| `market` | TEXT | `ALL` / `KOSPI` / `KOSDAQ` |
| `stock_count` | INTEGER | 그날 체결된 종목 수 (CHECK `> 0`) |
| `built_at` | TEXT | 언제 채웠나 |

**휴장일을 계산으로 맞히지 않습니다.** 주말만 걸러 세면 개발구간 평일 3,042일 중
**162일(5.3%)** 이 어긋나고, 그 162일은 명절·공휴일이라 하필 실적 발표와 뉴스가
몰리는 연휴 전후입니다. 뉴스의 `eff_dd` 배정이 이 달력 위에서 이뤄지므로 어긋나면
곧 미래참조가 됩니다. **우리가 실제로 받은 날**이 거래일입니다 — 추정이 아니라 기록입니다.

시장을 나눠 두는 이유: 한쪽 시장만 열리는 날을 양쪽 거래일로 잘못 읽지 않기 위해서입니다.
**휴장일은 이 표에 행이 없습니다** — `stock_count = 0` 행을 만들면 "0건으로 받았다" 와
"아직 안 받았다" 가 섞입니다.

⚠️ **`daily_price` 에서 파생된 표라 원본이 늘면 낡습니다.** 시세를 적재한 뒤
`ingest.store.adj_price.rebuild_calendar()` 를 함께 부릅니다.
`common/trading_calendar.py` 는 표가 없거나 비면 **원본을 직접 세는 폴백**으로 갑니다 —
조용히 낡은 답을 주는 것보다 느린 편이 낫기 때문입니다.

왜 표로 옮겼나 (로직은 원래 `common/trading_calendar.py` 에 있었습니다):

```
SELECT DISTINCT bas_dd FROM daily_price   9.2M 행을 훑는다   599ms
SELECT bas_dd FROM trading_calendar       4,102행을 읽는다    13ms   ← 45배
```

두 답이 같음을 실측으로 확인했습니다(4,102일 · 완전 일치).

---

## 4. 스키마 버전과 마이그레이션

`PRAGMA user_version` 으로 관리합니다. **번호는 이름이 아니라 선착순 인덱스**입니다 —
배정표는 `migrations.py` 주석표 · `sqlite_db.py` 표 · `NEXT_MIGRATION_VERSION` 세 곳에
있고, 바꿀 때 셋을 함께 고칩니다.

| 버전 | 제목 (코드의 배정표 그대로) |
|---|---|
| v1 | 수집 대장 · 호출 예산 (`collect_log` · `call_budget`) |
| v2 | 수집 대장에 시도 횟수 |
| v3 | 응답 원문 보존 (`raw_response`) |
| v4 | robots.txt 캐시 (`robots_cache`) |
| v5 | 반입 — 남의 자료를 들인 기록 (`inbox_*` 3표) |
| v6 | 공시 시점정합 — 결산기가 아니라 알게 된 날로 세운다 (`dart_financial` · `dart_disclosure`) |
| v7 | 거시 통계 — 기준월이 아니라 공표된 날로 세운다 (`macro_series`) |
| v8 | 수집 실행 기록 — 지금 돌고 있는지 밖에서 볼 수 있게 (`ingest_run` · `ingest_run_stage`) |
| v9 | 수정주가 4칸 · 실측 거래일 달력 (`daily_price.adj_*` · `trading_calendar`) — 이슈 #51 |
| **v10** | **종목 신원 · 법인 개요** (`stock_identity` · `corp_profile`) — 공공데이터포털 금융위 |
| **v11** | **종목기본정보** (`stock_base_info` · 우선주 판별의 정본) — KRX · 2026-09-03 적용 |
| **v12** | **텍스트 신호** (`text_signal` · 공시 제목 감성 확률 3칸 · 고유 제목마다) — 2026-09-04 적용 |
| **v13** | **지수 기본키에 시장** (`index_price` PK + `index_class`) — 같은 이름의 업종지수가 둘이다 · 2026-09-07 적용 · PR #157 |
| v14 | 다음 빈 번호 (**선착순이라 확정이 아니다** — v11 이 그랬다). 후보: #159 지수 준비구간을 (a) 로 넣는다면 `index_price.source` |

---

## 5. 이 문서가 답하지 않는 것

- **칸별 값의 품질** — `python scripts/check_data.py`(시세) ·
  `check_dart.py`(재무)가 답합니다. 스키마가 맞아도 값은 틀릴 수 있습니다.
- **누가 언제 꺼내 쓰나** — [`supply/`](../../../supply/__init__.py) 정문과
  [아키텍처](../../아키텍처/version1.2/아키텍처.md)가 답합니다.
- **HF 배포본의 구조** — [데이터파트 최신 명세서](../../데이터파트/README.md)가 답합니다.
